--- a/k6-test.yaml
+++ b/k6-test.yaml
@@ -2,6 +2,8 @@ apiVersion: k6.io/v1alpha1
 kind: K6
 metadata:
   name: k6-demo
+  annotations:
+    argocd.argoproj.io/hook-delete-policy: HookSucceeded
 spec:
   parallelism: 4
   script:
