post hook update

--- a/k6-test/k6-test.yaml
+++ b/k6-test/k6-test.yaml
@@ -3,7 +3,9 @@ kind: K6
 metadata:
   name: k6-demo
   annotations:
-    argocd.argoproj.io/hook-delete-policy: HookSucceeded
+    argocd.argoproj.io/hook: PostSync
+    argocd.argoproj.io/hook-delete-policy: BeforeHookCreation
+    argocd.argoproj.io/sync-wave: "1"
 spec:
   parallelism: 2
   script:
