--- a/k6-test/config-map.yaml
+++ b/k6-test/config-map.yaml
@@ -4,7 +4,8 @@ metadata:
   name: k6-stress-test
   labels:
     app.kubernetes.io/part-of: argocd
-
+    annotations:
+    argocd.argoproj.io/sync-wave: "0"
 data:
   new.js: |+
     import http from 'k6/http';
@@ -12,7 +13,7 @@ data:
 
     export const options = {
       stages: [
-        { target: 200, duration: '30s' },
+        { target: 50, duration: '30s' },
         { target: 0, duration: '30s' },
       ],
     };
