--- a/config-map.yaml
+++ b/config-map.yaml
@@ -1,29 +1,26 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: k6-stress-test
+  name: crocodile-stress-test
   labels:
     app.kubernetes.io/part-of: argocd
     annotations:
     argocd.argoproj.io/sync-wave: "0"
+
 data:
   new.js: |+
     import http from 'k6/http';
     import { check } from 'k6';
-
     export const options = {
       stages: [
-        { target: 50, duration: '30s' },
+        { target: 202, duration: '30s' },
         { target: 0, duration: '30s' },
       ],
     };
-
     export default function () {
       const result = http.get('https://test-api.k6.io/public/crocodiles/');
       check(result, {
         'http response status code is 200': result.status === 200,
       });
-
       
     }
-
