group check update

--- a/config-map.yaml
+++ b/config-map.yaml
@@ -10,17 +10,26 @@ metadata:
 data:
   new.js: |+
     import http from 'k6/http';
-    import { check } from 'k6';
+    import { group, check } from 'k6';
     export const options = {
       stages: [
-        { target: 50, duration: '30s' },
-        { target: 0, duration: '30s' },
+        { target: 40, duration: '20s' },
+        { target: 0, duration: '20s' },
       ],
     };
     export default function () {
+      group('get crocodiles', function () {
       const result = http.get('https://test-api.k6.io/public/crocodiles/');
       check(result, {
         'http response status code is 200': result.status === 200,
+      });
+      });
+
+      group('get testk6', function () {
+      const result = http.get('https://test.k6.io');
+      check(result, {
+        'http response status code is 200': result.status === 200,
+      });
       });
       
     }
