--- a/config-map.yaml
+++ b/config-map.yaml
@@ -12,8 +12,12 @@ data:
     import http from 'k6/http';
     import { group, check } from 'k6';
     export const options = {
+      thresholds: {
+    'group_duration{group:::get crocodiles}': ['avg < 400'],
+    'group_duration{group:::get testk6}': ['avg < 200'],
+    },
       stages: [
-        { target: 40, duration: '20s' },
+        { target: 30, duration: '20s' },
         { target: 0, duration: '20s' },
       ],
     };
@@ -31,5 +35,5 @@ data:
         'http response status code is 200': result1.status === 200,
       });
       });
-      
+      sleep(1);
     }
