--- a/config-map.yaml
+++ b/config-map.yaml
@@ -10,11 +10,11 @@ metadata:
 data:
   new.js: |+
     import http from 'k6/http';
-    import { group, check } from 'k6';
+    import { group, check, sleep } from 'k6';
     export const options = {
       thresholds: {
-    'group_duration{group:::get crocodiles}': ['avg < 400'],
-    'group_duration{group:::get testk6}': ['avg < 200'],
+    'group_duration{group:::getcrocodiles}': ['avg < 200'],
+    'group_duration{group:::gettestk6}': ['avg < 100'],
     },
       stages: [
         { target: 30, duration: '20s' },
@@ -22,14 +22,14 @@ data:
       ],
     };
     export default function () {
-      group('get crocodiles', function () {
+      group('getcrocodiles', function () {
       const result = http.get('https://test-api.k6.io/public/crocodiles/');
       check(result, {
         'http response status code is 200': result.status === 200,
       });
       });
 
-      group('get testk6', function () {
+      group('gettestk6', function () {
       const result1 = http.get('https://test.k6.io');
       check(result1, {
         'http response status code is 200': result1.status === 200,
